--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ server.servlet.context-path=/
 
 spring.datasource.username=root
 spring.datasource.password=qja18344981008
-spring.datasource.url=jdbc:mysql://49.234.192.208:3306/cbdlxt?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/parking?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
